--- a/index.html
+++ b/index.html
@@ -7,11 +7,22 @@
     <title>Booleaners</title>
 </head>
 <body>
+    <!-- header section -->
     <header>
-        <div class="logo">
-            <img src="C:/Users/andre/Desktop/logo.svg" alt="logo booleaner" class="logo">
+        <div class="container">
+            <div class="logo">
+                <img src="C:/Users/andre/Desktop/logo.svg" alt="logo booleaner" class="logo">
+            </div>
         </div>
-    </header>
+
+        <!-- info's -->
+        <section>
+            <h1 class="title">Internet deve essere al servizio del "bene pubblico": Il manifesto di Tim Berners-Lee</h1>
+            <p class="info">Scritto da <a href="" id="booleaner">The Booleaner</a><br>
+                il 10/10/2020
+            </p>
+        </section>
+    </header> 
 
     <main>
 
