[UPD] added Tim photos and paragraph lorem

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <body>
     <!-- header section -->
     <header>
-        <div class="container">
+        <div class="backhead">
             <div class="logo">
                 <img src="C:/Users/andre/Desktop/logo.svg" alt="logo booleaner" class="logo">
             </div>
         </div>
 
         <!-- info's -->
-        <section>
+        <section class="container">
             <h1 class="title">Internet deve essere al servizio del "bene pubblico": Il manifesto di Tim Berners-Lee</h1>
             <p class="info">Scritto da <a href="" id="booleaner">The Booleaner</a><br>
                 il 10/10/2020
@@ -25,6 +25,19 @@
     </header> 
 
     <main>
+
+        <!-- images of tim with info's -->
+        <div class="container">
+            <div class="main-image">
+                <img src="./img/tim-1.jpg" alt="tim1">
+                <img src="./img/tim-2.jpg" alt="tim2">
+            </div>
+            <p>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen <br>
+            2nd Photo: Wikimedia, by Paul Clarkie
+            </p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae excepturi error dolore enim cum debitis architecto repellendus nesciunt, asperiores natus voluptates doloribus officia inventore accusantium facilis impedit optio. Quas, vero. Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti delectus, nostrum, omnis pariatur nulla est, temporibus officia aspernatur <span id="highlighter">laudantium dolorum perferendis rerum ea laborum porro esse!</span> Sapiente, perferendis. Ipsum, magnam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni saepe facilis, quisquam delectus nemo ipsam voluptates inventore laudantium exercitationem nulla assumenda porro vitae aspernatur doloribus at architecto illum, quos sint!</p>
+        </div>
+
 
     </main>
 
