[UPD] added table on index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="backhead">
             <div class="logo">
-                <img src="C:/Users/andre/Desktop/logo.svg" alt="logo booleaner" class="logo">
+                <img src="C:/Users/andre/Desktop/logo.svg" alt="logo booleaner">
             </div>
         </div>
 
@@ -35,12 +35,71 @@
             <p>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen <br>
             2nd Photo: Wikimedia, by Paul Clarkie
             </p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae excepturi error dolore enim cum debitis architecto repellendus nesciunt, asperiores natus voluptates doloribus officia inventore accusantium facilis impedit optio. Quas, vero. Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti delectus, nostrum, omnis pariatur nulla est, temporibus officia aspernatur <span id="highlighter">laudantium dolorum perferendis rerum ea laborum porro esse!</span> Sapiente, perferendis. Ipsum, magnam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni saepe facilis, quisquam delectus nemo ipsam voluptates inventore laudantium exercitationem nulla assumenda porro vitae aspernatur doloribus at architecto illum, quos sint!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae excepturi error dolore enim cum debitis architecto repellendus nesciunt, asperiores natus voluptates doloribus officia inventore accusantium facilis impedit optio. Quas, vero. Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti delectus, nostrum, omnis pariatur nulla est, temporibus officia aspernatur <span id="highlighter">laudantium dolorum perferendis rerum ea laborum porro esse!</span> Sapiente, perferendis. Ipsum, magnam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni saepe facilis, quisquam delectus nemo ipsam voluptates inventore laudantium exercitationem nulla assumenda porro vitae aspernatur doloribus at architecto illum, quos sint!
+            </p>
+            <ul>
+                <li>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi magnam laudantium modi hic nemo fugit similique ipsum consectetur pariatur id autem, corrupti ut libero quisquam qui, dolorem, sapiente molestiae dolorum!
+                </li>
+                <li>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi magnam laudantium modi hic nemo fugit similique ipsum consectetur pariatur id autem, corrupti ut libero quisquam qui, dolorem, sapiente molestiae dolorum!
+                </li>
+                <li>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi magnam laudantium modi hic nemo fugit similique ipsum consectetur pariatur id autem, corrupti ut libero quisquam qui, dolorem, sapiente molestiae dolorum!
+                </li>
+            </ul>
+            <table>
+                <thead>
+                    <tr>
+                        <td>
+                            Lorem ipsum dolor 
+                        </td>
+                        <td>
+                            Lorem ipsum dolor
+                        </td>
+                        <td>
+                            Lorem ipsum dolor 
+                        </td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>
+                            lorem ipsum dolor
+                        </td>
+                        <td>
+                            lorem ipsum dolor
+                        </td>
+                        <td>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic facere ea earum! Minus magni harum esse libero sequi dicta odit tempora eveniet, magnam deserunt assumenda alias vero nisi iure asperiores.
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            lorem ipsum dolor
+                        </td>
+                        <td>
+                            lorem ipsum dolor
+                        </td>
+                        <td>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ullam voluptate labore ab. Eligendi ratione voluptatibus repellendus aspernatur sapiente. Facilis iusto ullam quibusdam nulla voluptate, vero quidem aliquam. Veritatis, accusamus.
+                        </td>
+                        <tr>
+                            <td>
+                                lorem ipsum dolor
+                            </td>
+                            <td>
+                                lorem ipsum dolor
+                            </td>
+                            <td>
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem saepe ipsam nisi perferendis magnam et. Ducimus aspernatur assumenda reprehenderit vero aliquam ipsa quae, eaque, a at voluptates magnam, aperiam vel.
+                            </td>
+                        </tr>
+                    </tr>
+                </tbody>
+            </table>
         </div>
-
-
     </main>
-
     <footer>
 
     </footer>
