[UPD] table don on both css and html

--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
                 <thead>
                     <tr>
                         <td>
-                            Lorem ipsum dolor 
+                            <strong>Lorem ipsum dolor</strong> 
                         </td>
                         <td>
-                            Lorem ipsum dolor
+                            <strong>Lorem ipsum dolor</strong>
                         </td>
                         <td>
-                            Lorem ipsum dolor 
+                            <strong>Lorem ipsum dolor</strong> 
                         </td>
                     </tr>
                 </thead>
@@ -71,7 +71,18 @@
                             lorem ipsum dolor
                         </td>
                         <td>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic facere ea earum! Minus magni harum esse libero sequi dicta odit tempora eveniet, magnam deserunt assumenda alias vero nisi iure asperiores.
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic facere ea earum! Minus magni harum esse libero sequi dicta odit tempora eveniet, <br> magnam deserunt assumenda alias vero nisi iure asperiores.
+                        </td>
+                    </tr>
+                    <tr id="white-row">
+                        <td>
+                            lorem ipsum dolor
+                        </td>
+                        <td>
+                            lorem ipsum dolor
+                        </td>
+                        <td>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ullam voluptate labore ab. Eligendi ratione voluptatibus repellendus aspernatur sapiente. <br> Facilis iusto ullam quibusdam nulla voluptate, vero quidem aliquam. Veritatis, accusamus.
                         </td>
                     </tr>
                     <tr>
@@ -82,19 +93,8 @@
                             lorem ipsum dolor
                         </td>
                         <td>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ullam voluptate labore ab. Eligendi ratione voluptatibus repellendus aspernatur sapiente. Facilis iusto ullam quibusdam nulla voluptate, vero quidem aliquam. Veritatis, accusamus.
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem saepe ipsam nisi perferendis magnam et. Ducimus aspernatur assumenda reprehenderit vero aliquam ipsa quae,<br> eaque, a at voluptates magnam, aperiam vel.
                         </td>
-                        <tr>
-                            <td>
-                                lorem ipsum dolor
-                            </td>
-                            <td>
-                                lorem ipsum dolor
-                            </td>
-                            <td>
-                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem saepe ipsam nisi perferendis magnam et. Ducimus aspernatur assumenda reprehenderit vero aliquam ipsa quae, eaque, a at voluptates magnam, aperiam vel.
-                            </td>
-                        </tr>
                     </tr>
                 </tbody>
             </table>
