[UPD] fixed both title and table errors, finished the foother and added comments. esercizio finito

--- a/index.html
+++ b/index.html
@@ -28,15 +28,19 @@
 
         <!-- images of tim with info's -->
         <div class="container">
-            <div class="main-image">
+            <div>
                 <img src="./img/tim-1.jpg" alt="tim1">
                 <img src="./img/tim-2.jpg" alt="tim2">
             </div>
             <p>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen <br>
             2nd Photo: Wikimedia, by Paul Clarkie
             </p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae excepturi error dolore enim cum debitis architecto repellendus nesciunt, asperiores natus voluptates doloribus officia inventore accusantium facilis impedit optio. Quas, vero. Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti delectus, nostrum, omnis pariatur nulla est, temporibus officia aspernatur <span id="highlighter">laudantium dolorum perferendis rerum ea laborum porro esse!</span> Sapiente, perferendis. Ipsum, magnam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni saepe facilis, quisquam delectus nemo ipsam voluptates inventore laudantium exercitationem nulla assumenda porro vitae aspernatur doloribus at architecto illum, quos sint!
+
+            <!-- first paragraph -->
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae excepturi error dolore enim cum debitis architecto repellendus nesciunt, asperiores natus voluptates doloribus officia inventore accusantium facilis impedit optio. Quas, vero. Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti delectus, nostrum, omnis pariatur nulla est, temporibus officia aspernatur <span>laudantium dolorum perferendis rerum ea laborum porro esse!</span> Sapiente, perferendis. Ipsum, magnam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni saepe facilis, quisquam delectus nemo ipsam voluptates inventore laudantium exercitationem nulla assumenda porro vitae aspernatur doloribus at architecto illum, quos sint!
             </p>
+
+            <!-- unordered list -->
             <ul>
                 <li>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi magnam laudantium modi hic nemo fugit similique ipsum consectetur pariatur id autem, corrupti ut libero quisquam qui, dolorem, sapiente molestiae dolorum!
@@ -48,7 +52,10 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi magnam laudantium modi hic nemo fugit similique ipsum consectetur pariatur id autem, corrupti ut libero quisquam qui, dolorem, sapiente molestiae dolorum!
                 </li>
             </ul>
+
+            <!-- table section -->
             <table>
+                <!-- table head -->
                 <thead>
                     <tr>
                         <td>
@@ -62,6 +69,8 @@
                         </td>
                     </tr>
                 </thead>
+
+                <!-- table body -->
                 <tbody>
                     <tr>
                         <td>
@@ -71,18 +80,18 @@
                             lorem ipsum dolor
                         </td>
                         <td>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic facere ea earum! Minus magni harum esse libero sequi dicta odit tempora eveniet, <br> magnam deserunt assumenda alias vero nisi iure asperiores.
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. <br> Hic facere ea earum! Minus magni harum esse libero sequi dicta odit tempora eveniet, <br> magnam deserunt assumenda alias vero nisi iure asperiores.
                         </td>
                     </tr>
                     <tr id="white-row">
-                        <td>
+                        <td >
                             lorem ipsum dolor
                         </td>
                         <td>
                             lorem ipsum dolor
                         </td>
                         <td>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ullam voluptate labore ab. Eligendi ratione voluptatibus repellendus aspernatur sapiente. <br> Facilis iusto ullam quibusdam nulla voluptate, vero quidem aliquam. Veritatis, accusamus.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ullam voluptate labore ab. <br> Eligendi ratione voluptatibus repellendus aspernatur sapiente. <br> Facilis iusto ullam quibusdam nulla voluptate, vero quidem aliquam. Veritatis, accusamus.
                         </td>
                     </tr>
                     <tr>
@@ -93,15 +102,30 @@
                             lorem ipsum dolor
                         </td>
                         <td>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem saepe ipsam nisi perferendis magnam et. Ducimus aspernatur assumenda reprehenderit vero aliquam ipsa quae,<br> eaque, a at voluptates magnam, aperiam vel.
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem saepe <br> ipsam nisi perferendis magnam et. Ducimus aspernatur assumenda reprehenderit vero aliquam ipsa quae,<br> eaque, a at voluptates magnam, aperiam vel.
                         </td>
                     </tr>
                 </tbody>
             </table>
+
+            <!-- second paragraph -->
+                <div>
+                    <p id="secp">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio, voluptas ipsa? Commodi repellendus aliquam dignissimos reiciendis provident delectus accusamus aperiam est distinctio nulla, fugiat voluptatem explicabo perferendis neque incidunt architecto! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt, sapiente dolorum. Tempore ab accusantium molestiae perspiciatis repellat, <Span>rem debitis, vitae, reprehenderit nostrum corrupti natus fuga.</Span> Laboriosam quisquam eaque vitae enim? Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum corrupti at ipsum nam reprehenderit. A et cum illum impedit hic porro culpa natus provident sed laboriosam, eveniet libero iure tempore!</p>
+                </div>
         </div>
     </main>
-    <footer>
 
+    <!-- footer section -->
+    <footer>
+        <div class="container">
+            <div>
+                <p class="info">Potrebbero interessarti</p>
+                <img src="./img/monitor.jpg" alt="monitor">     <!--  immagini footer  -->
+            </div>
+            <div> 
+                <img src="./img/graph.jpg" alt="graph">
+            </div>
+        </div>
     </footer>
 </body>
 </html>
