[UPD] bonus completato

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <!-- header section -->
     <header>
         <div class="backhead">
-            <div class="logo">
-                <img src="C:/Users/andre/Desktop/logo.svg" alt="logo booleaner">
+            <div class="container">
+                <img id="logo" src="C:/Users/andre/Desktop/logo.svg" alt="logo booleaner">
             </div>
         </div>
 
